# Horizon

./: .env  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  EVENT_SYSTEM_GUIDE.md  README.md  build.sh  production_config.toml  recipes.json  test_sysinfo.rs  test_transform_json.rs
.claude/: settings.local.json
.devcontainer/: devcontainer.json
crates/game_server/: Cargo.toml
crates/game_server/src/: auth_integration_tests.rs  config.rs  error.rs  lib.rs  tests.rs  utils.rs
crates/game_server/src/connection/: client.rs  manager.rs  mod.rs  response.rs
crates/game_server/src/health/: circuit_breaker.rs  metrics.rs  mod.rs
crates/game_server/src/messaging/: mod.rs  router.rs  types.rs
crates/game_server/src/security/: input_validation.rs  mod.rs  rate_limiter.rs
crates/game_server/src/server/: core.rs  handlers.rs  mod.rs
crates/horizon/: Cargo.toml
crates/horizon/src/: app.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs  signals.rs
crates/horizon_bugs/: Cargo.toml
crates/horizon_bugs/src/: lib.rs
crates/horizon_event_system/: Cargo.toml  README.md  build.rs
crates/horizon_event_system/examples/: auth_core_events_example.rs  debug_event_errors.rs  show_abi_detection.rs  test_abi_version.rs  test_string_abi_version.rs
crates/horizon_event_system/src/: api.rs  async_logging.rs  auth_tests.rs  context.rs  events.rs  gorc_macros.rs  lib.rs  macros.rs  monitoring.rs  plugin.rs  shutdown.rs  test_integration.rs  traits.rs  types.rs  utils.rs
crates/horizon_event_system/src/events/: tests.rs
crates/horizon_event_system/src/gorc/: README.md  config.rs  defaults.rs  examples.rs  instance.rs  migration_guide.rs  mod.rs  subscription.rs  system.rs  utils.rs  virtualization.rs  zones.rs
crates/horizon_event_system/src/gorc/channels/: channel.rs  layer.rs  manager.rs  mod.rs  registry.rs  types.rs
crates/horizon_event_system/src/gorc/multicast/: group.rs  lod.rs  manager.rs  mod.rs  types.rs
crates/horizon_event_system/src/gorc/network/: coordinator.rs  engine.rs  mod.rs  queue.rs  types.rs
crates/horizon_event_system/src/gorc/spatial/: mod.rs  partition.rs  query.rs  rtree.rs
crates/horizon_event_system/src/gorc/tests/: distance_filtering_test.rs  integration_test.rs  mod.rs  performance_test.rs  realistic_movement_test.rs  replication_test.rs  spatial_functional.rs  virtualization_test.rs  zone_event_test.rs
crates/horizon_event_system/src/system/: cache.rs  client.rs  core.rs  emitters.rs  handlers.rs  management.rs  mod.rs  path_router.rs  stats.rs  tests.rs
crates/player_test_client/: Cargo.toml
crates/player_test_client/src/: main.rs
crates/plugin_greeter/: Cargo.toml
crates/plugin_greeter/src/: lib.rs
crates/plugin_logger/: Cargo.toml
crates/plugin_logger/examples/: test_transform.rs
crates/plugin_logger/src/: lib.rs
crates/plugin_player/: Cargo.toml  README.md
crates/plugin_player/.claude/: settings.local.json
crates/plugin_player/src/: events.rs  lib.rs  player.rs
crates/plugin_player/src/handlers/: combat.rs  communication.rs  connection.rs  mod.rs  movement.rs  scanning.rs
crates/plugin_system/: Cargo.toml
crates/plugin_system/src/: error.rs  lib.rs  manager.rs
crates/universal_plugin_system/: Cargo.toml
crates/universal_plugin_system/docs/: README.md  advanced-usage.md  architecture.md  event-propagation.md  event-system.md  migration-guide.md  plugin-development.md  quick-start.md
crates/universal_plugin_system/examples/: simple_test.rs  working_plugin_test.rs
crates/universal_plugin_system/src/: context.rs  error.rs  event.rs  lib.rs  macros.rs  manager.rs  plugin.rs  propagation.rs  utils.rs
docs/: architecture.md  performance-optimization.md  plugin-development.md
examples/: connection_aware_handlers.rs
