[workspace]
resolver = "2"
members = [
    "crates/*",
    # Examples
]

[workspace.dependencies]
# === Async Runtime & Networking ===
async-trait = "0.1"
futures = "0.3"
horizon_sockets = { git = "https://github.com/Far-Beyond-Dev/Horizon-Sockets", rev = "aa0badb262e1344a8aceaaf5caf55012dc7fa89a" }
luminal_rt = "0.4.1"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = "0.27.0"

# === CLI & Configuration ===
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

# === Concurrency & Performance ===
futures-util = "0.3"
crossbeam = "0.8"
dashmap = "6.1.0"
num_cpus = "1.13"
rayon = "1.7.0"

# === Data Processing & Encoding ===
uuid = { version = "1.18.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
base64 = "0.22"
flate2 = "1.0"

# === Error Handling ===
anyhow = "1.0"
thiserror = "2.0.12"
bug = "0.2.0"

# === Logging & Tracing ===
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

# === Memory & Utilities ===
const_format = "0.2"
lazy_static = "1.4.0"
libc = "0.2"
once_cell = "1.19.0"

# === Platform & System ===
libloading = "0.8"
sysinfo = "0.36.1"

# === Testing & Development ===
tempfile = "3.5"

# === External Dependencies ===
ue_types = { git = "https://github.com/tristanpoland/UE5-rs", rev = "15df47693e314e4ca12fc97b8c8ed7b260fa6c8b" }

# === Workspace Dependencies ===
game_server = { path = "crates/game_server" }
horizon = { path = "crates/horizon" }
horizon_event_system = { path = "crates/horizon_event_system" }
plugin_system = { path = "crates/plugin_system" }
horizon_bugs = { path = "crates/horizon_bugs" }

[profile.profiling]
inherits = "release"
debug = true
strip = false
