[package]
name = "horizon"
version = "0.42.0"
edition = "2021"

[[bin]]
name = "horizon"
path = "src/main.rs"

[lib]
name = "lib_horizon"
path = "src/lib.rs"

[dependencies]
horizon_event_system = { workspace = true }
tracing-subscriber = { workspace = true }
plugin_system = { workspace = true }
game_server = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }


