[package]
name = "horizon_event_system"
version = "0.22.0" # Ensure this matches the version used in tests and examples
description = "Horizon Event System for handling events in the Horizon game server ecosystem."
license = "MIT"
edition = "2021"

[dependencies]
tokio = { workspace = true }
luminal_rt = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
lazy_static = { workspace = true }
smallvec = "1.13"
compact_str = "0.7"
flate2 = { workspace = true }
base64 = { workspace = true }
const_format = { workspace = true }
rstar = "0.12"

# Proc macro dependencies for new derive macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
backtrace = "0.3.75"
