[package]
name = "player_test_client"
version = "0.1.0"
edition = "2021"
description = "WebSocket test client for GORC player simulation"

[[bin]]
name = "simulate"
path = "src/main.rs"

[dependencies]
horizon_event_system = { path = "../horizon_event_system" }
plugin_player = { path = "../plugin_player" }
tokio = { workspace = true }
tokio-tungstenite = "0.21"
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.8"