[package]
name = "plugin_system"
version = "0.1.0"
edition = "2021"

[dependencies]
horizon_event_system = { workspace = true }
libloading = { workspace = true }
luminal_rt = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }